stylesheets/style.css
.title {
  color: #f2f6f9;
  font-size: 3em;
  margin-bottom: 25px; }

a {
  color: rgba(242, 246, 249, 0.25);
  text-decoration: none;
  transition: all 300ms;
  -ms-transition: all 300ms;
  -webkit-transition: all 300ms; }

a:hover {
  color: #f2f6f9;
  text-decoration: none;
  transition: all 300ms;
  -ms-transition: all 300ms;
  -webkit-transition: all 300ms; }

html, body {
  height: 100vh;
  width: 100vw;
  padding: 0;
  margin: 0;
  text-align: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 300; }
  html section, body section {
    height: 100vh;
    width: 100vw;
    position: relative; }
  html div, body div {
    position: relative; }

body {
  background: #1d1d1d; }

nav.navbar.navbar-inverse {
  background-color: #1d1d1d;
  border: none;
  font-size: 1.5em; }
  nav.navbar.navbar-inverse .navbar-nav {
    float: none;
    display: inline-block;
    margin-bottom: -8px; }
    nav.navbar.navbar-inverse .navbar-nav a#blue {
      color: #5083bf; }
    nav.navbar.navbar-inverse .navbar-nav a#blue:hover {
      color: #f2f6f9; }
    nav.navbar.navbar-inverse .navbar-nav li > a {
      padding: 25px;
      color: rgba(242, 246, 249, 0.25);
      cursor: pointer; }
    nav.navbar.navbar-inverse .navbar-nav li > a:hover {
      color: #f2f6f9; }

#main {
  text-align: center;
  padding-top: 35vh; }
  #main .logo {
    height: 10em; }
  #main .subtitle {
    margin-top: 10px;
    color: #f2f6f9;
    font-size: 1.75em; }
  #main a.down {
    position: absolute;
    bottom: 10vh;
    cursor: pointer; }
  #main .glyphicon {
    font-size: 1.75em; }

#who {
  padding: 20vh 0; }
  #who .equation-wrapper {
    margin-bottom: 20px; }
    #who .equation-wrapper .equation {
      width: 70%; }
  #who .content {
    padding: 0 15vw;
    color: #f2f6f9;
    font-size: 1.25em; }

#what {
  padding-top: 20vh; }
  #what .line {
    width: 100vw;
    padding: 10px 0; }
    #what .line a {
      padding: 10px; }
      #what .line a img.square {
        height: 175px; }

#committees {
  padding-top: 20vh;
  height: 180vh; }
  #committees .infographic-wrapper {
    height: 60vh;
    margin: 25px 0 40px 0; }
    #committees .infographic-wrapper .infographic {
      height: 100%;
      width: 100%; }
  #committees .left {
    width: 40vw;
    color: #f2f6f9;
    text-align: right;
    font-size: 1.5em;
    display: inline-block;
    float: left; }
    #committees .left ul {
      margin-bottom: 0;
      padding-left: 0;
      list-style-type: none;
      cursor: pointer;
      line-height: 1.75em;
      display: inline-block; }
      #committees .left ul li {
        width: auto; }
      #committees .left ul li:hover {
        color: #5083bf; }
      #committees .left ul .break {
        margin-bottom: 1em; }
  #committees .right {
    width: 45vw;
    color: #f2f6f9;
    text-align: left;
    display: inline-block; }
    #committees .right .default {
      margin-top: 10em; }
      #committees .right .default .name {
        font-size: 2em; }
      #committees .right .default .description {
        font-size: 1.25em; }
        #committees .right .default .description a {
          text-decoration: underline;
          color: #f2f6f9; }
        #committees .right .default .description a:visited {
          color: #f2f6f9; }
    #committees .right .committee .name {
      font-size: 2em;
      margin-bottom: 30px; }
    #committees .right .committee .description {
      font-size: 1.25em;
      margin-bottom: 3em; }
    #committees .right .committee .directors {
      font-size: 1.25em; }
      #committees .right .committee .directors .person {
        display: inline-block;
        margin: 10px 10px 0 0; }
        #committees .right .committee .directors .person .name {
          background: #1d1d1d;
          color: #f2f6f9;
          text-align: center;
          font-weight: 400;
          font-size: 0.8em;
          padding: 8px;
          border-radius: 0 0 5px 5px; }
        #committees .right .committee .directors .person .image {
          display: inline-block;
          background: url(/img/team/q.png);
          background-size: contain;
          height: 150px;
          width: 150px;
          border-radius: 5px 5px 0 0;
          margin: 0 0 -6px 0; }
          #committees .right .committee .directors .person .image:hover {
            -webkit-transition: background 1s;
            -moz-transition: background 1s;
            -o-transition: background 1s;
            transition: background 1s; }
          #committees .right .committee .directors .person .image.managing-director {
            background: url(/img/team/serious_margaret.png);
            background-size: contain; }
            #committees .right .committee .directors .person .image.managing-director:hover {
              background: url(/img/team/funny_margaret.png);
              background-size: contain; }
          #committees .right .committee .directors .person .image.associate-director {
            background: url(/img/team/serious_andreea.jpg);
            background-size: contain; }
            #committees .right .committee .directors .person .image.associate-director:hover {
              background: url(/img/team/funny_andreea.jpg);
              background-size: contain; }
          #committees .right .committee .directors .person .image.makemit-director {
            background: url(/img/team/serious_abhi.jpg);
            background-size: contain; }
            #committees .right .committee .directors .person .image.makemit-director:hover {
              background: url(/img/team/funny_abhi.jpg);
              background-size: contain; }
          #committees .right .committee .directors .person .image.logs-director {
            background: url(/img/team/serious_anna.jpg);
            background-size: contain; }
            #committees .right .committee .directors .person .image.logs-director:hover {
              background: url(/img/team/funny_anna.jpg);
              background-size: contain; }
/* ... */

